--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     ]
   },
   "devDependencies": {
+    "react-router-dom": "^6.8.0",
     "webpack": "^5.75.0",
     "webpack-dev-server": "^4.11.1"
   }
